hero button fix color contrast

--- a/src/style/components/_hero.scss
+++ b/src/style/components/_hero.scss
@@ -170,7 +170,7 @@
 
         .hero--link {
             font-size: calc(4px + 12 * (100vw - 320px) / 1046);
-            background: rgb(6,166,102);
+            background: #068854;
             color: rgb(255,255,255);
             width: 250px;
             transition: .2s;
